--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 Chicken is marinated for several hours in a mixture of lemon juice, dahi (yogurt) Kashmiri red chilli, salt, garam masala and ginger garlic paste.The chicken is usually cooked in a tandoor (traditional clay oven), but may be grilled, roasted, or pan-fried. It is served in a mild curry sauce that includes butter. The sauce is a tomato- and onion-based sauce that is simmered until smooth and much of the water has evaporated. There are many variations on the composition and spicing of the sauce, which is sieved so that it is finally velvety smooth. Spices may include cardamom, cumin, cloves, cinnamon, coriander, pepper, garam masala and fenugreek (Punjabi/Hindi: kasuri methi). Cream may be used in the sauce or as a garnish. Cashew paste may be used as a thickener and is finally garnished with coriander.
                 
 Chickens raised specifically for food are called broilers. In the U.S., broilers are typically butchered at a young age. Modern Cornish Cross hybrids, for example, are butchered as early as 8 weeks for fryers and 12 weeks for roasting birds.
-
 Capons (castrated cocks) produce more and fattier meat. For this reason, they are considered a delicacy and were particularly popular in the Middle Ages.
+The dish was developed in 1947 by founders of Moti Mahal restaurant in Delhi, India. The dish was made "by chance" by mixing the leftover chicken in a tomato gravy, rich in butter and cream.[10] In 1974, a recipe was published for "Murgh Makhani" (Tandoori chicken cooked in butter and tomato sauce)". In 1975, the English phrase "butter chicken" first appeared in print, as a specialty of the house at Gaylord Indian restaurant in Manhattan. In Australia and New Zealand, it is also eaten as a pie filling. The dish is common in India and many other countries
                 <br>(End of Butter Chicken section)<a href="#top"> Back To Top</a>
                 </p>
           </section>
